Revise README for MixinTale enhancements
Updated README to reflect new features and clarify usage of MixinTale for Hytale mods.